--- a/src/main/resources/static/pages/index.html
+++ b/src/main/resources/static/pages/index.html
@@ -48,16 +48,19 @@
             responseType:"json",
             async: true,
             success:function (data){
-                alert('登录成功')
                 console.log(data)
-                $(location).attr('href', 'books.html');
+                if(data=="success"){
+                    alert('登录成功')
+                    $(location).attr('href', 'books.html');
+                }else{
+                    alert('账号或者密码有问题')
+                }
             },
             error:function (data){
                 console.log(data)
                 alert('账号或者密码有问题')
             }
         })
-
     }
 </script>
 </body>
